修改user模型，增加url和role

--- a/Pipfile
+++ b/Pipfile
@@ -28,6 +28,9 @@ djangorestframework-jwt = "==1.11.0"
 redis = "==3.2.1"
 django-redis = "*"
 drf-extensions = "*"
+django-imagekit = "==4.0.2"
+django-ipware = "==2.1.0"
+itsdangerous = "==1.1.0"
 
 [requires]
 python_version = "3.7"
